# SmartPowerSocket

./: .gitignore  README.md
Android/: settings.gradle.kts
Android/app/: build.gradle.kts
Android/app/java/com/bruh/powersocket/network/: ApiClient.kt  ApiService.kt
Android/app/java/com/bruh/powersocket/network/models/: EnergyResponse.kt  PowerResponse.kt  StatusResponse.kt
Android/app/src/androidTest/java/com/bruh/powersocket/: ExampleInstrumentedTest.kt
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/com/bruh/powersocket/: MainActivity.kt
Android/app/src/main/java/com/bruh/powersocket/ui/theme/: Color.kt  Theme.kt  Type.kt
Android/app/src/main/res/layout/: activity_main.xml
Android/app/src/main/res/values/: strings.xml  themes.xml
Android/app/src/test/java/com/bruh/powersocket/: ExampleUnitTest.kt
Android/gradle/wrapper/: gradle-wrapper.properties
RaspPi/: CMakeLists.txt  build.sh  install.sh
RaspPi/config/: config.cfg
RaspPi/includes/: ConfigManager.h  GPIOController.h  HTTPServer.h  Logger.h  PowerMonitor.h  RelayController.h  SensorManager.h  Statistics.h
RaspPi/srcs/: ConfigManager.cpp  GPIOController.cpp  HTTPServer.cpp  Logger.cpp  PowerMonitor.cpp  RelayController.cpp  SensorManager.cpp  Statistics.cpp  main.cpp
